INCLUDE_DIRECTORIES(./)

if(ANDROID)
    SET(LIBRARY_OUTPUT_PATH  ../../../lib)
    LINK_DIRECTORIES(../../../lib)
    INCLUDE_DIRECTORIES(../)
else()
    LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
endif()

set(LIB_NAME_MAIN ptp_toolbox)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./data SRC_LIST)
AUX_SOURCE_DIRECTORY(./strings SRC_LIST)
add_library(${LIB_NAME_MAIN} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME_MAIN})
